Compare view now displays all groups in focus as separate heatmap in detail view. Some problems remaining (size etc).
git-svn-id: svn://localhost:8080/caleydo_main/trunk@2994 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3